Fix whitespace error

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
 .main-container {
   height: 100vh;
   max-width: 100vw;
-  display: flex;
-  justify-content: center;
+  /* display: flex;
+  justify-content: center; */
   background-image: linear-gradient(
     to right, 
     #FF5959 0%,
@@ -16,6 +16,7 @@
   max-width: 1280px;
   height: 100%;
   padding: 6.0rem 0 3.0rem 8.0rem ;
+  margin: 0 auto;
 
   display: flex;
   flex-direction: column;
